US-0000239 Demo - Metadata Object

--- a/cartridges/app_storefront_base/cartridge/templates/resources/address_en_GB.properties
+++ b/cartridges/app_storefront_base/cartridge/templates/resources/address_en_GB.properties
@@ -43,4 +43,4 @@ msg.delete.address.confirmation.modal=Are you sure you want to remove the follow
 msg.no.saved.addresses=No saved addresses
 
 button.cancel=Cancel
-button.confirm=Yes
+button.confirm={!New Features Activation}
